[gd_scene load_steps=8 format=3 uid="uid://0hxqp7vy7b3r"]

[ext_resource type="Script" path="res://scenes/levels/hello.gd" id="1_4ahbp"]
[ext_resource type="PackedScene" uid="uid://b6j1f4wg7fctp" path="res://scenes/Boubou.tscn" id="1_jv5iv"]
[ext_resource type="PackedScene" uid="uid://cgsnmul1dmmnk" path="res://scenes/camera_2d.tscn" id="4_l42yb"]
[ext_resource type="Texture2D" uid="uid://cnm4qwmvnsjop" path="res://assets/menu/Exit.png" id="4_p0do3"]
[ext_resource type="Texture2D" uid="uid://bwd71u22gvfhp" path="res://assets/menu/menue_start.png" id="5_0w40m"]
[ext_resource type="PackedScene" uid="uid://5o8s6k2pnsvy" path="res://scenes/button.tscn" id="7_o2y33"]
[ext_resource type="Texture2D" uid="uid://b04duf7i743l1" path="res://assets/menu/Start.png" id="8_s35cc"]

[node name="Hello" type="Node2D"]
script = ExtResource("1_4ahbp")

[node name="Boubou" parent="." instance=ExtResource("1_jv5iv")]
visible = false
position = Vector2(172, -109)
rotation = 1.01578
freeze = true

[node name="Camera2D" parent="." instance=ExtResource("4_l42yb")]

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 200
position = Vector2(0, 138)
scale = Vector2(0.7, 0.7)
texture = ExtResource("5_0w40m")

[node name="MenuButtons" type="Node2D" parent="."]

[node name="Start" parent="MenuButtons" instance=ExtResource("7_o2y33")]
offset_left = 2.0
offset_top = -59.0
offset_right = 402.0
offset_bottom = 141.0
scale = Vector2(0.6, 0.6)
focus_neighbor_bottom = NodePath("../Exit")
texture_normal = ExtResource("8_s35cc")

[node name="Exit" parent="MenuButtons" instance=ExtResource("7_o2y33")]
offset_left = 0.0
offset_top = 68.0
offset_right = 400.0
offset_bottom = 268.0
scale = Vector2(0.6, 0.6)
focus_neighbor_top = NodePath("../Start")
focus_neighbor_right = NodePath("../../ZenModeToggle")
focus_neighbor_bottom = NodePath("../../ZenModeToggle")
texture_normal = ExtResource("4_p0do3")

[node name="ZenModeToggle" type="CheckButton" parent="."]
z_index = 800
offset_left = 563.0
offset_top = 351.0
offset_right = 747.0
offset_bottom = 401.0
focus_neighbor_left = NodePath("../MenuButtons/Exit")
focus_neighbor_top = NodePath("../MenuButtons/Exit")
theme_override_font_sizes/font_size = 30
text = "ZenMode"

[connection signal="ButtonClick" from="MenuButtons/Start" to="." method="_on_start_button_click"]
[connection signal="ButtonClick" from="MenuButtons/Exit" to="." method="_on_exit_button_click"]
[connection signal="toggled" from="ZenModeToggle" to="." method="_on_zen_mode_toggled"]
